[package]
name = "draw_triangle"
version = "0.1.0"
edition = "2021"
authors = ["George Mutale <mutalegeorge367@gmail.com>"]
description = "A CLI tool to draw equilateral triangles in the terminal."
repository = "https://github.com/GEORGEMUTALE/draw_triangle"
homepage = "https://github.com/GEORGEMUTALE/draw_triangle"
license = "MIT"
documentation = "https://docs.rs/draw_triangle"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
