[package]
name = "draw_triangle"
version = "0.1.1"
edition = "2021"
authors = ["George Mutale <mutalegeorge367@gmail.com>"]
description = "A CLI tool to draw equilateral triangles in the terminal."
repository = "https://github.com/GEORGEMUTALE/draw_triangle"
homepage = "https://github.com/GEORGEMUTALE/draw_triangle"
license = "MIT"
documentation = "https://docs.rs/draw_triangle"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.5"
indicatif = "0.17.9"
log = "0.4.22"
